@@ -1,3 +1,7 @@
+Thu Jul  8 11:39:24 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/odbc/connectparams.c:
+	- support comma syntax with SERVER parameter
+
 Wed Jul  7 16:56:08 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* misc/freetds_autobuild: update automatic test
 
@@ -2660,4 +2664,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog-0.82 added because of release
 	
 $FreeTDS$
-$Id: ChangeLog,v 1.3067 2010/07/07 14:56:21 freddy77 Exp $
+$Id: ChangeLog,v 1.3068 2010/07/08 09:39:34 freddy77 Exp $
